fix breaks on firefox

--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -174,6 +174,7 @@ h3 {
 }
 
 .separator {
+  border: 0;
   border-top: 2px dashed var(--color-light-grey);
   width: 100%;
 
